text and button alignment corrected

--- a/src/snackbar.scss
+++ b/src/snackbar.scss
@@ -9,7 +9,7 @@
         box-sizing: border-box;
         max-width: 450px;
         min-height: 46px;
-        padding: 10px 20px;
+        padding: 9px 20px 10px 20px;
         border-radius: 3px;
         background-color: rgb(58,58,58);
         box-shadow: 0 3px 10px rgb(0 0 0 / 10%), 0 3px 3px rgb(0 0 0 / 5%);
@@ -31,12 +31,15 @@
         }
         > .message{
             font-size: 0.9375rem;
+            line-height: 0.9375rem;
+            padding-top: 0.125rem;
         }
         > .actionButton{
             height: 100%;
             padding: 5px 3px;
             background-color: transparent;
             font-size: 0.9375rem;
+            line-height: 0.9375rem;
             color: #F7FF00;
             border:none;
             outline:none;
